--- a/styles/monster.css
+++ b/styles/monster.css
@@ -182,6 +182,12 @@
   margin-bottom: 4px;
 }
 
+.monster-action-frequency {
+  font-weight: normal;
+  text-transform: none;
+  font-style: normal;
+}
+
 /* Actions */
 .monster-actions {
   font-size: 16px;
