--- a/styles/default.css
+++ b/styles/default.css
@@ -3,6 +3,99 @@
    Based on EncounterPlus PF2e structure
    =================================================== */
 
+/* Custom Fonts - Beaufort for LOL */
+@font-face {
+  font-family: 'Beaufort';
+  src: url('../fonts/BeaufortforLOL-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Beaufort';
+  src: url('../fonts/BeaufortforLOL-LightItalic.ttf') format('truetype');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Beaufort';
+  src: url('../fonts/BeaufortforLOL-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Beaufort';
+  src: url('../fonts/BeaufortforLOL-Italic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Beaufort';
+  src: url('../fonts/BeaufortforLOL-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Beaufort';
+  src: url('../fonts/BeaufortforLOL-MediumItalic.ttf') format('truetype');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Beaufort';
+  src: url('../fonts/BeaufortforLOL-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Beaufort';
+  src: url('../fonts/BeaufortforLOL-BoldItalic.ttf') format('truetype');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Beaufort';
+  src: url('../fonts/BeaufortforLOL-Heavy.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Beaufort';
+  src: url('../fonts/BeaufortforLOL-HeavyItalic.ttf') format('truetype');
+  font-weight: 800;
+  font-style: italic;
+}
+
+/* Custom Fonts - Avenir Next Condensed */
+@font-face {
+  font-family: 'Avenir Next Condensed';
+  src: url('../fonts/avenir-next-condensed-regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Avenir Next Condensed';
+  src: url('../fonts/avenir-next-condensed-bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Avenir Next Condensed';
+  src: url('../fonts/avenir-next-condensed-italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
 /* Color Variables */
 :root {
     /* Nimble Brand Colors */
@@ -24,8 +117,8 @@
     --color-border: #dddddd;
 
     /* Fonts */
-    --font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    --font-family-heading: "Georgia", "Times New Roman", serif;
+    --font-family-base: 'Avenir Next Condensed', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    --font-family-heading: 'Beaufort', "Georgia", "Times New Roman", serif;
     --font-family-mono: "Courier New", Courier, monospace;
 
     /* Spacing */
