--- a/styles/monster.css
+++ b/styles/monster.css
@@ -33,7 +33,7 @@
 
 .monster-header-right {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   gap: 12px;
 }
 
@@ -77,16 +77,19 @@
 }
 
 .monster-hp {
-  font-family: 'Avenir Next Condensed', sans-serif;
-  font-weight: bold;
+  font-family: 'Beaufort', Georgia, serif;
+  font-weight: 800;
   font-style: italic;
-  font-size: 18px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
 }
 
-.hp-icon {
-  font-size: 20px;
+.icon-heart {
   color: #C5BFB0;
-  opacity: 0.3px;
+  width: 32px;
+  height: 32px;
+  margin-right: -12px;
 }
 
 .monster-fly {
