--- a/views/monster.html
+++ b/views/monster.html
@@ -13,11 +13,11 @@
     <div class="monster-header">
       <div class="monster-header-left">
         <span class="monster-name">{{name}}</span>
-        <span class="monster-level">LVL {{data.level|default: '1'}}{% if data.size %}, {{data.size|map: 'Size'|uppercase}}{% endif %}</span>
+        <span class="monster-level">LVL {{data.level|default: '—'}}, {{data.size|default: 'Medium'|map: 'Size'|uppercase}}</span>
       </div>
       <div class="monster-header-right">
         {% if data.armor %}<span class="monster-armor"><svg class="icon icon-shield" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M3 10.4167C3 7.21907 3 5.62028 3.37752 5.08241C3.75503 4.54454 5.25832 4.02996 8.26491 3.00079L8.83772 2.80472C10.405 2.26824 11.1886 2 12 2C12.8114 2 13.595 2.26824 15.1623 2.80472L15.7351 3.00079C18.7417 4.02996 20.245 4.54454 20.6225 5.08241C21 5.62028 21 7.21907 21 10.4167C21 10.8996 21 11.4234 21 11.9914C21 17.6294 16.761 20.3655 14.1014 21.5273C13.38 21.8424 13.0193 22 12 22C10.9807 22 10.62 21.8424 9.89856 21.5273C7.23896 20.3655 3 17.6294 3 11.9914C3 11.4234 3 10.8996 3 10.4167Z"/></svg>{{data.armor}}</span>{% endif %}
-        <span class="monster-hp"><span class="hp-icon">♥</span> {{data.hp.max|default: '—'}}</span>
+        <span class="monster-hp"><svg class="icon icon-heart" viewBox="0 0 296.37 296.37" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M121.069,247.456c-28.267-17.661-90.827-58.345-103.146-79.932 C1.871,139.436-3.649,123.13,2.377,95.336c2.856-13.244,8.496-23.676,13.63-30.975c5.183-7.375,15.958-17.525,23.954-21.68 c8.072-4.194,19.885-8.289,35.615-8.648c33.815,0,52.884,12.771,62.821,23.198c6.217,6.521,12.423,6.472,18.602-0.087 c9.981-10.595,29.36-23.513,64.208-22.719c15.719,0.348,27.533,4.433,35.61,8.632c7.995,4.161,18.77,14.31,23.905,21.718 c4.988,7.196,10.454,17.465,13.282,30.562c6.005,27.794,0.495,44.1-15.529,72.187c-12.352,21.593-74.907,62.272-103.174,79.932 c-7.642,4.77-18.759,14.957-27.081,14.881C139.904,262.272,128.71,252.226,121.069,247.456z"/></svg>{{data.hp.max|default: '—'}}</span>
         {% if data.movement.fly > 0 %}<span class="monster-fly">FLY</span>{% endif %}
       </div>
     </div>
