--- a/styles/monster.css
+++ b/styles/monster.css
@@ -92,11 +92,38 @@
   margin-right: -12px;
 }
 
-.monster-fly {
-  font-family: 'Avenir Next Condensed', sans-serif;
-  font-size: 11px;
-  font-weight: bold;
-  text-transform: uppercase;
+.monster-movement {
+  font-family: 'Beaufort', Georgia, serif;
+  font-weight: 800;
+  font-style: italic;
+  font-size: 20px;
+  font-variant: small-caps;
+  display: flex;
+  align-items: center;
+}
+
+.icon-arrow {
+  color: #C5BFB0;
+  width: 24px;
+  height: 24px;
+  margin-right: -6px;
+}
+
+.monster-saves {
+  font-family: 'Beaufort', Georgia, serif;
+  font-weight: 800;
+  font-style: italic;
+  font-size: 20px;
+  font-variant: small-caps;
+  display: flex;
+  align-items: center;
+}
+
+.icon-star {
+  color: #C5BFB0;
+  width: 28px;
+  height: 28px;
+  margin-right: -8px;
 }
 
 /* Short Description (italic subtitle) */
