💄 Small edit to legendary side of monsters stat block

--- a/views/monster.html
+++ b/views/monster.html
@@ -73,7 +73,7 @@
     <hr class="monster-divider">
     <div class="monster-section">
       <span class="monster-action">
-        <strong>Bloodied:</strong> {{data.bloodied.abilities|md}}
+        <strong>BLOODIED:</strong> {{data.bloodied.abilities|md}}
       </span>
     </div>
     {% endif %}
@@ -82,7 +82,7 @@
     {% if data.isLegendary == true and data.lastStand.behavior %}
     <div class="monster-section">
       <span class="monster-action">
-        <strong>Last Stand:</strong> {{data.lastStand.behavior|md}}
+        <strong>LAST STAND:</strong> {{data.lastStand.behavior|md}}
       </span>
     </div>
     {% endif %}
